Fix hover animation/icon alignment for categories block

--- a/client/common/sass/components/_categories-block.sass
+++ b/client/common/sass/components/_categories-block.sass
@@ -17,6 +17,10 @@
 		margin-top: -3px
 		font-weight: 700
 
-	&:hover
 		span::before
-			filter: invert(1)
+			position: relative
+			top: 2px
+
+		&:hover
+			span::before
+				filter: invert(1)
